--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ input{
 .btns_container button{
     padding:1em;
     border:none;
-    
+    background-color: brown;
+    color: white;
 }
 
 footer{
