--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ input{
 .btns_container button{
     padding:1em;
     border:none;
-    background-color: brown;
+    background-color: blue;
     color: white;
 }
 
